--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
   </head>
-  <body class="bg-black">
+  <body class="bg-black text-white">
     <div class="p-3">
       <div class="row">
         <header class="col-3 bg-info rounded">
@@ -89,9 +89,128 @@
             <div class="bg-danger" style="height: 100vh">Qui ci vanno i Brani</div>
           </div>
         </header>
-        <main></main>
+        <footer class="fixed-bottom row" style="height: 100px; width: 100">
+          <div>
+            <div>
+              <div><img />qui ci va l'img del brano</div>
+              <div>
+                <div>qui ci va il titolo del brano</div>
+                <div>qui l'artista</div>
+              </div>
+              <button>
+                <span
+                  ><svg
+                    data-encore-id="icon"
+                    role="img"
+                    aria-hidden="true"
+                    viewBox="0 0 16 16"
+                    class="Svg-sc-ytk21e-0 dYnaPI"
+                  >
+                    <path d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path>
+                    <path
+                      d="M11.75 8a.75.75 0 0 1-.75.75H8.75V11a.75.75 0 0 1-1.5 0V8.75H5a.75.75 0 0 1 0-1.5h2.25V5a.75.75 0 0 1 1.5 0v2.25H11a.75.75 0 0 1 .75.75z"
+                    ></path>
+                  </svg>
+                </span>
+              </button>
+            </div>
+            <div>
+              <div>
+                <div>
+                  <div>
+                    <!-- qui ci vanno il tasto random e quello per riprodurre il brano precedente -->
+                    <button style="--button-size: 32px">
+                      <svg
+                        data-encore-id="icon"
+                        role="img"
+                        aria-hidden="true"
+                        viewBox="0 0 16 16"
+                        class="Svg-sc-ytk21e-0 dYnaPI"
+                      >
+                        <path
+                          d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z"
+                        ></path>
+                        <path
+                          d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"
+                        ></path>
+                      </svg>
+                    </button>
+                    <button>
+                      <svg
+                        data-encore-id="icon"
+                        role="img"
+                        aria-hidden="true"
+                        viewBox="0 0 16 16"
+                        class="Svg-sc-ytk21e-0 dYnaPI"
+                      >
+                        <path
+                          d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"
+                        ></path>
+                      </svg>
+                    </button>
+                  </div>
+                  <div>
+                    <!-- qui vi va il tasto play -->
+                    <button>
+                      <svg
+                        data-encore-id="icon"
+                        role="img"
+                        aria-hidden="true"
+                        viewBox="0 0 16 16"
+                        class="Svg-sc-ytk21e-0 dYnaPI"
+                      >
+                        >
+                        <path
+                          d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
+                        ></path>
+                      </svg>
+                    </button>
+                  </div>
+                  <div>
+                    <!-- qui ci va il tasto > e il loop -->
+                    <button>
+                      <svg
+                        data-encore-id="icon"
+                        role="img"
+                        aria-hidden="true"
+                        viewBox="0 0 16 16"
+                        class="Svg-sc-ytk21e-0 dYnaPI"
+                      >
+                        <path
+                          d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
+                        ></path>
+                      </svg>
+                    </button>
+                    <button>
+                      <svg
+                        data-encore-id="icon"
+                        role="img"
+                        aria-hidden="true"
+                        viewBox="0 0 16 16"
+                        class="Svg-sc-ytk21e-0 dYnaPI"
+                      >
+                        <path
+                          d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"
+                        ></path>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+                <div>qui vi va 1div per il tempo, 1 div per la barra e 1 div per la durata del brano</div>
+              </div>
+            </div>
+            <div></div>
+          </div>
+        </footer>
+        <main>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </main>
         <aside></aside>
-        <footer></footer>
       </div>
     </div>
 
