--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
   </head>
   <body class="bg-black text-white">
-    <div class="p-3">
+    <div class="">
       <div class="row">
         <header class="col-3 bg-info rounded">
           <div>
@@ -89,7 +89,7 @@
             <div class="bg-danger" style="height: 100vh">Qui ci vanno i Brani</div>
           </div>
         </header>
-        <footer class="fixed-bottom row" style="height: 100px; width: 100">
+        <footer class="fixed-bottom row bg-success p-0 m-0" style="height: 100px; width: 100">
           <div>
             <div>
               <div><img />qui ci va l'img del brano</div>
@@ -202,7 +202,7 @@
             <div></div>
           </div>
         </footer>
-        <main>
+        <main class="col-6 bg-secondary">
           <div></div>
           <div></div>
           <div></div>
@@ -210,7 +210,7 @@
           <div></div>
           <div></div>
         </main>
-        <aside></aside>
+        <aside class="col-3 bg-dark"></aside>
       </div>
     </div>
 
