--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -6,9 +6,62 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/dist/css/style.min.css"
   </head>
-  <body class="d-flex">
+  <body class="d-flex" id="albumPage">
     <aside class="aside">trdhrt</aside>
-    <main id="main"></main>
+    <main id="main">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col">
+            <div class="d-flex">
+              <div>
+                <button>1</button>
+                <button class="mb-2">2</button>
+              </div>
+              <div class="ms-auto">
+                <button
+                  class="btn border rounded-pill dropdown-toggle rounded-pills text-white"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <img
+                    src="./assets/imgs/main/image-5.jpg"
+                    alt=""
+                    style="width: 25px; height: 25px"
+                    class="rounded-circle"
+                  />
+                  Lidia Nautilus
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="row text-white">
+              <div class="col-3 mt-3"><img src="./assets/imgs/main/image-1.jpg" alt="" style="height: 250px" /></div>
+              <div class="col-8 mt-5 p-0">
+                <h6 class="mt-4">Album</h6>
+                <h1 class="display-1 fw-bold mb-3">Gioventu bruciata</h1>
+                <div class="d-flex">
+                  <img
+                    src="./assets/imgs/main/image-1.jpg"
+                    alt=""
+                    class="rounded-circle"
+                    style="width: 25px; height: 25px"
+                  />
+                  <h5><span> pinguini tattici nucleari</span> <span>2017</span></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col"></div>
+      </div>
+    </main>
     <aside class="aside">dthdfth</aside>
     <footer></footer>
   </body>
