--- a/home.html
+++ b/home.html
@@ -6,12 +6,12 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-black text-white container-fluid">
     <div class="">
-      <div class="row">
-        <header class="col-3 bg-info rounded">
-          <div>
-            <ul class="list-unstyled d-flex flex-column">
+      <div class="row justify-content-center p-2">
+        <header class="col-3 rounded">
+          <div class="rounded bg-dark p-4 mb-2">
+            <ul class="list-unstyled d-flex flex-column gap-3 m-0">
               <li class="">
                 <svg
                   data-encore-id="icon"
@@ -19,17 +19,19 @@
                   aria-hidden="true"
                   class="Svg-sc-ytk21e-0 bneLcE home-icon QbaKKdcHNA2x3_YJvpYu"
                   viewBox="0 0 24 24"
-                  style="width: 25"
+                  style="width: 30"
                 >
                   <path
+                    fill="#B3B3B3"
                     d="M12.5 3.247a1 1 0 0 0-1 0L4 7.577V20h4.5v-6a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v6H20V7.577l-7.5-4.33zm-2-1.732a3 3 0 0 1 3 0l7.5 4.33a2 2 0 0 1 1 1.732V21a1 1 0 0 1-1 1h-6.5a1 1 0 0 1-1-1v-6h-3v6a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.577a2 2 0 0 1 1-1.732l7.5-4.33z"
                   ></path>
                 </svg>
                 <span>Home</span>
               </li>
               <li class="">
-                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 25">
+                <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 30">
                   <path
+                    fill="#B3B3B3"
                     d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z"
                   ></path>
                 </svg>
@@ -37,28 +39,30 @@
               </li>
             </ul>
           </div>
-          <div>
-            <div>
+          <div class="bg-dark rounded p-4">
+            <div class="">
               <div class="d-flex">
-                <button class="btn btn-primary me-auto" style="width: 180px">
+                <button class="btn text-white me-auto bg-dark mb-2 p-1" style="width: 150px">
                   <span
                     ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 30px">
                       <path
+                        fill="#B3B3B3"
                         d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"
                       ></path>
                     </svg> </span
                   >La tua Libreria
                 </button>
-                <button class="btn btn-primary mx-2" style="width: 40px; height: 40px">
+                <button class="btn text-white mx-2 bg-dark" style="width: 40px; height: 40px">
                   <span style="display: block"
                     ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16">
                       <path
+                        fill="#B3B3B3"
                         d="M15.25 8a.75.75 0 0 1-.75.75H8.75v5.75a.75.75 0 0 1-1.5 0V8.75H1.5a.75.75 0 0 1 0-1.5h5.75V1.5a.75.75 0 0 1 1.5 0v5.75h5.75a.75.75 0 0 1 .75.75z"
                       ></path>
                     </svg>
                   </span>
                 </button>
-                <button class="btn btn-primary mx-2" style="width: 40px; height: 40px">
+                <button class="btn text-white mx-2 bg-dark" style="width: 40px; height: 40px">
                   <span style="display: block"
                     ><svg
                       data-encore-id="icon"
@@ -68,6 +72,7 @@
                       class="Svg-sc-ytk21e-0 cAMMLk"
                     >
                       <path
+                        fill="#B3B3B3"
                         d="M7.19 1A.749.749 0 0 1 8.47.47L16 7.99l-7.53 7.521a.75.75 0 0 1-1.234-.815.75.75 0 0 1 .174-.243l5.72-5.714H.75a.75.75 0 1 1 0-1.498h12.38L7.41 1.529a.749.749 0 0 1-.22-.53z"
                       ></path>
                     </svg>
@@ -77,131 +82,25 @@
               <div>
                 <div>
                   <div>
-                    <div class="bg-success">
-                      <button class="rounded-pill"><span>Playlist</span></button>
-                      <button class="rounded-pill"><span>Artisti</span></button>
-                      <button class="rounded-pill"><span>Album</span></button>
+                    <div class="mb-2">
+                      <button class="rounded-pill border-0 bg-black text-white px-2">
+                        <span>Playlist</span>
+                      </button>
+                      <button class="rounded-pill border-0 bg-black text-white px-2">
+                        <span>Artisti</span>
+                      </button>
+                      <button class="rounded-pill border-0 bg-black text-white px-2">
+                        <span>Album</span>
+                      </button>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="bg-danger" style="height: 100vh">Qui ci vanno i Brani</div>
+            <div class="" style="height: 100vh">Qui ci vanno i Brani</div>
           </div>
         </header>
-        <footer class="fixed-bottom row bg-success p-0 m-0" style="height: 100px; width: 100">
-          <div>
-            <div>
-              <div><img />qui ci va l'img del brano</div>
-              <div>
-                <div>qui ci va il titolo del brano</div>
-                <div>qui l'artista</div>
-              </div>
-              <button>
-                <span
-                  ><svg
-                    data-encore-id="icon"
-                    role="img"
-                    aria-hidden="true"
-                    viewBox="0 0 16 16"
-                    class="Svg-sc-ytk21e-0 dYnaPI"
-                  >
-                    <path d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path>
-                    <path
-                      d="M11.75 8a.75.75 0 0 1-.75.75H8.75V11a.75.75 0 0 1-1.5 0V8.75H5a.75.75 0 0 1 0-1.5h2.25V5a.75.75 0 0 1 1.5 0v2.25H11a.75.75 0 0 1 .75.75z"
-                    ></path>
-                  </svg>
-                </span>
-              </button>
-            </div>
-            <div>
-              <div>
-                <div>
-                  <div>
-                    <!-- qui ci vanno il tasto random e quello per riprodurre il brano precedente -->
-                    <button style="--button-size: 32px">
-                      <svg
-                        data-encore-id="icon"
-                        role="img"
-                        aria-hidden="true"
-                        viewBox="0 0 16 16"
-                        class="Svg-sc-ytk21e-0 dYnaPI"
-                      >
-                        <path
-                          d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z"
-                        ></path>
-                        <path
-                          d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"
-                        ></path>
-                      </svg>
-                    </button>
-                    <button>
-                      <svg
-                        data-encore-id="icon"
-                        role="img"
-                        aria-hidden="true"
-                        viewBox="0 0 16 16"
-                        class="Svg-sc-ytk21e-0 dYnaPI"
-                      >
-                        <path
-                          d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"
-                        ></path>
-                      </svg>
-                    </button>
-                  </div>
-                  <div>
-                    <!-- qui vi va il tasto play -->
-                    <button>
-                      <svg
-                        data-encore-id="icon"
-                        role="img"
-                        aria-hidden="true"
-                        viewBox="0 0 16 16"
-                        class="Svg-sc-ytk21e-0 dYnaPI"
-                      >
-                        >
-                        <path
-                          d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
-                        ></path>
-                      </svg>
-                    </button>
-                  </div>
-                  <div>
-                    <!-- qui ci va il tasto > e il loop -->
-                    <button>
-                      <svg
-                        data-encore-id="icon"
-                        role="img"
-                        aria-hidden="true"
-                        viewBox="0 0 16 16"
-                        class="Svg-sc-ytk21e-0 dYnaPI"
-                      >
-                        <path
-                          d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
-                        ></path>
-                      </svg>
-                    </button>
-                    <button>
-                      <svg
-                        data-encore-id="icon"
-                        role="img"
-                        aria-hidden="true"
-                        viewBox="0 0 16 16"
-                        class="Svg-sc-ytk21e-0 dYnaPI"
-                      >
-                        <path
-                          d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"
-                        ></path>
-                      </svg>
-                    </button>
-                  </div>
-                </div>
-                <div>qui vi va 1div per il tempo, 1 div per la barra e 1 div per la durata del brano</div>
-              </div>
-            </div>
-            <div></div>
-          </div>
-        </footer>
+
         <main class="col-6 bg-secondary">
           <div></div>
           <div></div>
@@ -210,8 +109,120 @@
           <div></div>
           <div></div>
         </main>
-        <aside class="col-3 bg-dark"></aside>
+        <aside class="col-3 bg-warning" style="height: 100vh"></aside>
       </div>
+      <footer class="fixed-bottom bg-success p-0 m-0 container-fluid" style="height: 80px; width: 100wh">
+        <div class="row p-2">
+          <div class="col-3 row px-3 d-flex justify-content-center">
+            <div class="col-3"><img />img</div>
+            <div class="col-4">
+              <div>qui ci va il titolo del brano</div>
+              <div>qui l'artista</div>
+            </div>
+
+            <a class="col-1"
+              ><span style="width: 20px"
+                ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                  <path d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path>
+                  <path
+                    d="M11.75 8a.75.75 0 0 1-.75.75H8.75V11a.75.75 0 0 1-1.5 0V8.75H5a.75.75 0 0 1 0-1.5h2.25V5a.75.75 0 0 1 1.5 0v2.25H11a.75.75 0 0 1 .75.75z"
+                  ></path>
+                </svg> </span
+            ></a>
+          </div>
+          <div class="col-6">
+            <div>
+              <div class="row justify-content-center">
+                <div class="col-2">
+                  <!-- qui ci vanno il tasto random e quello per riprodurre il brano precedente -->
+                  <button>
+                    <svg
+                      data-encore-id="icon"
+                      role="img"
+                      aria-hidden="true"
+                      viewBox="0 0 16 16"
+                      class="Svg-sc-ytk21e-0 dYnaPI"
+                      style="width: 30px"
+                    >
+                      <path
+                        d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z"
+                      ></path>
+                      <path
+                        d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"
+                      ></path>
+                    </svg>
+                  </button>
+                  <button>
+                    <svg
+                      data-encore-id="icon"
+                      role="img"
+                      aria-hidden="true"
+                      viewBox="0 0 16 16"
+                      class="Svg-sc-ytk21e-0 dYnaPI"
+                      style="width: 30px"
+                    >
+                      <path
+                        d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"
+                      ></path>
+                    </svg>
+                  </button>
+                </div>
+                <div class="col-2 d-flex justify-content-center">
+                  <!-- qui vi va il tasto play -->
+                  <button>
+                    <svg
+                      data-encore-id="icon"
+                      role="img"
+                      aria-hidden="true"
+                      viewBox="0 0 16 16"
+                      class="Svg-sc-ytk21e-0 dYnaPI"
+                      style="width: 30px"
+                    >
+                      >
+                      <path
+                        d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
+                      ></path>
+                    </svg>
+                  </button>
+                </div>
+                <div class="col-2">
+                  <!-- qui ci va il tasto > e il loop -->
+                  <button>
+                    <svg
+                      data-encore-id="icon"
+                      role="img"
+                      aria-hidden="true"
+                      viewBox="0 0 16 16"
+                      class="Svg-sc-ytk21e-0 dYnaPI"
+                      style="width: 30px"
+                    >
+                      <path
+                        d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
+                      ></path>
+                    </svg>
+                  </button>
+                  <button>
+                    <svg
+                      data-encore-id="icon"
+                      role="img"
+                      aria-hidden="true"
+                      viewBox="0 0 16 16"
+                      class="Svg-sc-ytk21e-0 dYnaPI"
+                      style="width: 30px"
+                    >
+                      <path
+                        d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"
+                      ></path>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+              <div>qui vi va 1div per il tempo, 1 div per la barra e 1 div per la durata del brano</div>
+            </div>
+          </div>
+          <div class="col-3"></div>
+        </div>
+      </footer>
     </div>
 
     <script
