--- a/home.html
+++ b/home.html
@@ -6,13 +6,13 @@
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
   </head>
-  <body class="bg-black text-white container-fluid">
+  <body class="bg-black text-white container-fluid m-0">
     <div class="">
       <div class="row justify-content-center p-2">
-        <header class="col-3 rounded">
+        <header class="col-2 rounded p-0">
           <div class="rounded bg-dark p-4 mb-2">
             <ul class="list-unstyled d-flex flex-column gap-3 m-0">
-              <li class="">
+              <li class="align-middle">
                 <svg
                   data-encore-id="icon"
                   role="img"
@@ -28,7 +28,7 @@
                 </svg>
                 <span>Home</span>
               </li>
-              <li class="">
+              <li class="align-middle">
                 <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 30">
                   <path
                     fill="#B3B3B3"
@@ -40,7 +40,7 @@
             </ul>
           </div>
           <div class="bg-dark rounded p-4">
-            <div class="">
+            <div class="bg-dark">
               <div class="d-flex">
                 <button class="btn text-white me-auto bg-dark mb-2 p-1" style="width: 150px">
                   <span
@@ -101,20 +101,22 @@
           </div>
         </header>
 
-        <main class="col-6 bg-secondary">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+        <main class="col-8 rounded">
+          <div class="bg-dark p-0 rounded" style="height: 100vh">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
         </main>
-        <aside class="col-3 bg-warning" style="height: 100vh"></aside>
+        <aside class="col-2 rounded bg-dark" style="height: 100vh"></aside>
       </div>
-      <footer class="fixed-bottom bg-success p-0 m-0 container-fluid" style="height: 80px; width: 100wh">
+      <footer class="fixed-bottom bg-black p-0 m-0 container-fluid" style="height: 90px; width: 100wh">
         <div class="row p-2">
           <div class="col-3 row px-3 d-flex justify-content-center">
-            <div class="col-3"><img />img</div>
+            <div class="col-3"><img src="./assets/imgs/main/image-1.jpg" style="width: 50px" /></div>
             <div class="col-4">
               <div>qui ci va il titolo del brano</div>
               <div>qui l'artista</div>
@@ -133,35 +135,24 @@
           <div class="col-6">
             <div>
               <div class="row justify-content-center">
+                <!-- qui ci vanno il tasto random e quello per riprodurre il brano precedente -->
                 <div class="col-2">
-                  <!-- qui ci vanno il tasto random e quello per riprodurre il brano precedente -->
-                  <button>
-                    <svg
-                      data-encore-id="icon"
-                      role="img"
-                      aria-hidden="true"
-                      viewBox="0 0 16 16"
-                      class="Svg-sc-ytk21e-0 dYnaPI"
-                      style="width: 30px"
-                    >
+                  <button class="btn ms-auto">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
                       <path
+                        fill="#B2B2B2"
                         d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z"
                       ></path>
                       <path
+                        fill="#B2B2B2"
                         d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"
                       ></path>
                     </svg>
                   </button>
-                  <button>
-                    <svg
-                      data-encore-id="icon"
-                      role="img"
-                      aria-hidden="true"
-                      viewBox="0 0 16 16"
-                      class="Svg-sc-ytk21e-0 dYnaPI"
-                      style="width: 30px"
-                    >
+                  <button class="btn">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
                       <path
+                        fill="#B2B2B2"
                         d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"
                       ></path>
                     </svg>
@@ -169,17 +160,13 @@
                 </div>
                 <div class="col-2 d-flex justify-content-center">
                   <!-- qui vi va il tasto play -->
-                  <button>
-                    <svg
-                      data-encore-id="icon"
-                      role="img"
-                      aria-hidden="true"
-                      viewBox="0 0 16 16"
-                      class="Svg-sc-ytk21e-0 dYnaPI"
-                      style="width: 30px"
-                    >
-                      >
+                  <button
+                    class="btn bg-white rounded-circle d-flex align-items-center"
+                    style="height: 46px; width: 46px"
+                  >
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 23px">
                       <path
+                        fill="#000000"
                         d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
                       ></path>
                     </svg>
@@ -187,30 +174,18 @@
                 </div>
                 <div class="col-2">
                   <!-- qui ci va il tasto > e il loop -->
-                  <button>
-                    <svg
-                      data-encore-id="icon"
-                      role="img"
-                      aria-hidden="true"
-                      viewBox="0 0 16 16"
-                      class="Svg-sc-ytk21e-0 dYnaPI"
-                      style="width: 30px"
-                    >
+                  <button class="btn">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
                       <path
+                        fill="#B2B2B2"
                         d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
                       ></path>
                     </svg>
                   </button>
-                  <button>
-                    <svg
-                      data-encore-id="icon"
-                      role="img"
-                      aria-hidden="true"
-                      viewBox="0 0 16 16"
-                      class="Svg-sc-ytk21e-0 dYnaPI"
-                      style="width: 30px"
-                    >
+                  <button class="btn">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
                       <path
+                        fill="#B2B2B2"
                         d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"
                       ></path>
                     </svg>
