--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -89,9 +89,9 @@
         </div>
       </div>
       <div class="container">
-        <div class="row bg-dark mt-2">
+        <div class="row mt-2" id="tabella">
           <div class="col d-flex mt-4">
-            <button class="rounded-circle border border-dark bg-success me-3 p-2">
+            <button class="rounded-circle border border-dark me-3 p-2" id="playBtn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="25"
@@ -143,6 +143,50 @@
               />
             </svg>
           </div>
+          <table class="table-dark text-white mt-5">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Titolo</th>
+                <th scope="col">Riproduzioni</th>
+                <th scope="col">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="white"
+                    class="bi bi-stopwatch"
+                    viewBox="0 0 16 16"
+                  >
+                    <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5z" />
+                    <path
+                      d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64l.012-.013.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5M8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3"
+                    />
+                  </svg>
+                </th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </main>
