--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -69,10 +69,18 @@
                 </div>
               </div>
               <div class="row text-white">
-                <div class="col-3 mt-3"><img src="./assets/imgs/main/image-1.jpg" alt="" style="height: 250px" /></div>
+                <div class="col-3 mt-3">
+                  <img
+                    src="./assets/imgs/main/image-1.jpg"
+                    alt=""
+                    style="height: 230px"
+                    id="albumImg
+                  "
+                  />
+                </div>
                 <div class="col-8 mt-5 p-0">
                   <h6 class="mt-4">Album</h6>
-                  <h1 class="display-1 fw-bold mb-3">Gioventu bruciata</h1>
+                  <h1 class="display-1 fw-bold mb-3" id="albumTitle">Gioventu bruciata</h1>
                   <div class="d-flex">
                     <img
                       src="./assets/imgs/main/image-1.jpg"
@@ -80,7 +88,7 @@
                       class="rounded-circle"
                       style="width: 25px; height: 25px"
                     />
-                    <h6><span> pinguini tattici nucleari</span> <span>2017</span></h6>
+                    <h6 id="albumArtist"><span> pinguini tattici nucleari</span> <span>2017</span></h6>
                   </div>
                 </div>
               </div>
@@ -192,5 +200,6 @@
     </main>
     <aside class="aside">dthdfth</aside>
     <footer></footer>
+    <script src="./AlbumPage.js"></script>
   </body>
 </html>
