aggiunto "header del main"

--- a/home.html
+++ b/home.html
@@ -97,14 +97,94 @@
                 </div>
               </div>
             </div>
-            <div class="" style="height: 100vh">Qui ci vanno i Brani</div>
+            <div class="" style="height: 100vh">
+              <div class="d-flex justify-content-between">
+                <button class="btn">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 15px" viewBox="0 0 16 16">
+                    <path
+                      fill="#B3B3B3"
+                      d="M7 1.75a5.25 5.25 0 1 0 0 10.5 5.25 5.25 0 0 0 0-10.5zM.25 7a6.75 6.75 0 1 1 12.096 4.12l3.184 3.185a.75.75 0 1 1-1.06 1.06L11.304 12.2A6.75 6.75 0 0 1 .25 7z"
+                    ></path>
+                  </svg>
+                </button>
+                <button class="btn text-white d-flex align-items-center">
+                  <span class="pe-2">Recenti</span>
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                    <path
+                      fill="#B3B3B3"
+                      d="M15 14.5H5V13h10v1.5zm0-5.75H5v-1.5h10v1.5zM15 3H5V1.5h10V3zM3 3H1V1.5h2V3zm0 11.5H1V13h2v1.5zm0-5.75H1v-1.5h2v1.5z"
+                    ></path>
+                  </svg>
+                </button>
+              </div>
+              <div></div>
+            </div>
           </div>
         </header>
 
         <main class="col-8 rounded">
           <div class="bg-dark p-0 rounded" style="height: 100vh">
-            <div></div>
-            <div></div>
+            <div class="d-flex align-items-center pt-3 px-2">
+              <div class="me-auto">
+                <button class="btn rounded-circle bg-black" style="width: 40px; height: 40px">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 21px" viewBox="0 0 20 20">
+                    <path
+                      fill="#B3B3B3"
+                      d="M11.03.47a.75.75 0 0 1 0 1.06L4.56 8l6.47 6.47a.75.75 0 1 1-1.06 1.06L2.44 8 9.97.47a.75.75 0 0 1 1.06 0z"
+                    ></path>
+                  </svg>
+                </button>
+                <button class="btn rounded-circle bg-black" style="width: 40px; height: 40px">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 21px" viewBox="0 0 20 20">
+                    <path
+                      fill="#B3B3B3"
+                      d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"
+                    ></path>
+                  </svg>
+                </button>
+              </div>
+              <div class="d-flex">
+                <button class="btn bg-white rounded-pill"><b>Esplora Premium</b></button>
+                <a
+                  class="btn rounded-pill bg-black rounded-pill text-white"
+                  draggable="false"
+                  data-encore-id="buttonPrimary"
+                  href="#"
+                  ><span
+                    ><span
+                      ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                        <path
+                          fill="#FFFFFF"
+                          d="M4.995 8.745a.75.75 0 0 1 1.06 0L7.25 9.939V4a.75.75 0 0 1 1.5 0v5.94l1.195-1.195a.75.75 0 1 1 1.06 1.06L8 12.811l-.528-.528a.945.945 0 0 1-.005-.005L4.995 9.805a.75.75 0 0 1 0-1.06z"
+                        ></path>
+                        <path
+                          fill="#FFFFFF"
+                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13z"
+                        ></path></svg></span
+                    ><span>Installa app</span></span
+                  ></a
+                >
+                <button class="btn bg-black rounded-circle" style="width: 40px; height: 40px">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                    <path
+                      fill="#FFFFFF"
+                      d="M8 1.5a4 4 0 0 0-4 4v3.27a.75.75 0 0 1-.1.373L2.255 12h11.49L12.1 9.142a.75.75 0 0 1-.1-.374V5.5a4 4 0 0 0-4-4zm-5.5 4a5.5 5.5 0 0 1 11 0v3.067l2.193 3.809a.75.75 0 0 1-.65 1.124H10.5a2.5 2.5 0 0 1-5 0H.957a.75.75 0 0 1-.65-1.124L2.5 8.569V5.5zm4.5 8a1 1 0 1 0 2 0H7z"
+                    ></path>
+                  </svg>
+                </button>
+                <button class="rounded-circle overflow-hidden" style="width: 40px; height: 40px">
+                  <span class="d-flex justify-content-center align-items-center">
+                    <img
+                      aria-hidden="false"
+                      draggable="false"
+                      loading="eager"
+                      src="https://scontent-ams2-1.xx.fbcdn.net/v/t31.18172-1/1978321_10204826862142538_3572043705028761540_o.jpg?stp=c7.0.50.50a_cp0_dst-jpg_p50x50&amp;_nc_cat=100&amp;ccb=1-7&amp;_nc_sid=5f2048&amp;_nc_ohc=3EXQkOaMuqAQ7kNvgGIYftH&amp;_nc_ht=scontent-ams2-1.xx&amp;edm=AP4hL3IEAAAA&amp;oh=00_AYAQyhoOxZJwFpHicZsjjeBJECz_paY_XwpRpyp-Xd-tFw&amp;oe=66977B1B"
+                      alt="Eddy Turpo"
+                      class="mMx2LUixlnN_Fu45JpFB Xz3tlahv16UpqKBW5HdK Yn2Ei5QZn19gria6LjZj"
+                  /></span>
+                </button>
+              </div>
+            </div>
             <div></div>
             <div></div>
             <div></div>
