correzione all'id della img cover

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -70,13 +70,7 @@
               </div>
               <div class="row text-white">
                 <div class="col-3 mt-3">
-                  <img
-                    src="./assets/imgs/main/image-1.jpg"
-                    alt=""
-                    style="height: 230px"
-                    id="albumImg
-                  "
-                  />
+                  <img id="albumImg" src="./assets/imgs/main/image-1.jpg" alt="" style="height: 230px" />
                 </div>
                 <div class="col-8 mt-5 p-0">
                   <h6 class="mt-4">Album</h6>
