--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -145,7 +145,7 @@
               />
             </svg>
           </div>
-          <table class="table-dark text-white mt-5">
+          <table class="table-dark text-white mt-5" id="tracksTable">
             <thead>
               <tr>
                 <th scope="col">#</th>
