creata linea sotto thead

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -145,8 +145,8 @@
               />
             </svg>
           </div>
-          <table class="table-dark text-white mt-5" id="tracksTable">
-            <thead>
+          <table class="table-dark text-white mt-5 ms-5 me-5" id="tracksTable">
+            <thead class="border-bottom border-light-subtle">
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">Titolo</th>
