add commenti e creata funzione che popola le colonne delle cards

--- a/home.html
+++ b/home.html
@@ -163,6 +163,9 @@
             <div id="perOggi" class="row g-0 bg-darkness">
               <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Consigliata per oggi</a>
             </div>
+            <!-- <div id="artisti" class="row g-0 bg-darkness">
+              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Artisti più popolari</a>
+            </div> -->
             <div id="popolari" class="row g-0 bg-darkness">
               <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Album più popolari</a>
             </div>
