aggiunto nome artista sotto il nome del brano

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -171,7 +171,9 @@
               </thead>
 
               <tbody>
-                <tr>
+                <!-- qui ci andranno i tracks -->
+
+                <!-- <tr>
                   <th scope="row">1</th>
                   <td>Mark</td>
                   <td>Otto</td>
@@ -187,7 +189,7 @@
                   <th scope="row">3</th>
                   <td colspan="2">Larry the Bird</td>
                   <td>@twitter</td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
