--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -49,10 +49,11 @@
                   </div>
                   <div class="ms-auto">
                     <button
-                      class="btn border rounded-pill dropdown-toggle rounded-pills text-white bg-dark p-1"
+                      class="btn border border-0 rounded-pill dropdown-toggle rounded-pills text-white bg-dark p-1"
                       type="button"
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
+                      id="BtnDropdown"
                     >
                       <img
                         src="./assets/imgs/main/image-5.jpg"
@@ -146,7 +147,7 @@
                 />
               </svg>
             </div>
-            <table class="table-dark text-white mt-5 ms-5 me-5" id="tracksTable">
+            <table class="table-dark text-white mt-4 ms-5" id="tracksTable">
               <thead class="border-bottom border-light-subtle">
                 <tr>
                   <th scope="col">#</th>
