tolto bordo ai bottoni

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -9,14 +9,15 @@
   <body>
     <div class="d-flex" id="albumPage">
       <aside class="aside">trdhrt</aside>
-      <main id="main">
+
+      <main class="col-8 rounded" data-bs-theme="dark" id="main">
         <div>
           <div class="container mt-2">
             <div class="row">
               <div class="col">
                 <div class="d-flex">
                   <div>
-                    <button class="rounded-circle bg-dark">
+                    <button class="rounded-circle bg-dark border border-0">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="15"
@@ -31,7 +32,7 @@
                         />
                       </svg>
                     </button>
-                    <button class="mb-2 rounded-circle bg-dark">
+                    <button class="mb-2 rounded-circle bg-dark border border-0">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="15"
