migliorato margine bottone

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -95,13 +95,13 @@
         </div>
         <div class="container" id="tabella">
           <div class="row mt-2">
-            <div class="col d-flex mt-4">
+            <div class="col d-flex mt-4 ms-3">
               <button class="rounded-circle border border-dark me-3 p-2" id="playBtn">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="25"
                   height="25"
-                  fill="currentColor"
+                  fill="black"
                   class="bi bi-play-fill"
                   viewBox="0 0 16 16"
                 >
@@ -341,5 +341,6 @@
       </div>
     </footer>
     <script src="./AlbumPage.js"></script>
+    <script src="path/to/color-thief.min.js"></script>
   </body>
 </html>
