reso piu dinamica la parte centrale della home
creata funzione che crea le cards album grazie al array datogli come parametro

--- a/home.html
+++ b/home.html
@@ -152,7 +152,7 @@
             </div>
             <div>
               <div class="my-3 mx-3" style="background: linear-gradient(13deg, rgba(0, 0, 0, 1) 0%, rgba(18, 18, 18, 1) 90%)">
-                <div id="annunci" class="d-flex p-3">
+                <div id="annunci" class="d-flex align-items-center flex-column flex-lg-row p-3">
                   <img src="" id="imgAnnunci" class="me-5 object-fit-cover" width="200" height="200" alt="cover album" />
                 </div>
               </div>
@@ -160,12 +160,12 @@
             <div id="perTe" class="row g-0 bg-darkness">
               <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Create per te</a>
             </div>
+            <div id="artisti" class="row g-0 bg-darkness">
+              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Artista preferito</a>
+            </div>
             <div id="perOggi" class="row g-0 bg-darkness">
               <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Consigliata per oggi</a>
             </div>
-            <!-- <div id="artisti" class="row g-0 bg-darkness">
-              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Artisti più popolari</a>
-            </div> -->
             <div id="popolari" class="row g-0 bg-darkness">
               <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Album più popolari</a>
             </div>
